# news-scraper

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  Untitled  cargo.dockerfile  compose.yml  config.json.example  config.toml.example  docker-compose.yml  logs  rating-prompt.md  readme.md  schema.surql  todo.md
.github/workflows/: docker.yml  mirror.yml  nuxt.yml  rust.yml
bun-article-parser/: .gitignore  dockerfile  index.ts  package.json
deno-article-parser/: .gitignore  deno.json  dockerfile  index.ts
docker/: article-parser.dockerfile  cargo.dockerfile  deno.dockerfile  nuxt.dockerfile
fetcher/: Cargo.toml  README.md
fetcher/src/: launcher.rs  main.rs  newsfetcher.rs  sources.rs
fetcher/src/sources/: africa_abidjan.rs  africa_africanews.rs  africa_apanews.rs  africa_lemonde.rs  africa_linfodrome.rs  africa_tv5monde.rs  africa_tvfivemonde.rs  be_lalibre.rs  be_rtbf.rs  be_rtl.rs  fr_20minutes.rs  fr_demotivateur.rs  fr_francetvinfo.rs  fr_futura_sciences.rs  fr_goodnewsnetwork.rs  fr_google.rs  fr_journaldesfemmes.rs  fr_lavoixdunord.rs  fr_leparisien.rs  fr_ouest-france.rs  fr_ouest_france.rs  fr_positivr.rs  fr_reddit-upliftingnews.rs  fr_reddit_upliftingnews.rs  fr_reporterre.rs  fr_sciencesetavenir.rs  fr_sudouest.rs  fr_twentyminutes.rs  francetvinfo.rs  futura_sciences.rs  futurasciences.rs  goodnewsnetwork.rs  google.rs  lavoixdunord.rs  leparisien.rs  lme_bbc.rs.bak  lme_bbcearth.rs  lme_beetravel.rs  lme_capturetheatlas.rs  lme_demotivateur.rs  (+25 more)
fetcher/src/sources/lme/: README.md  bbc.rs  bbcearth.rs  capturetheatlas.rs  futura_sciences.rs  geo.rs  mod.rs  national_history_museum.rs  nationalgeographic.rs  smithsonianmag.rs  theguardian.rs  travelandleisure.rs.bak
fetcher/src/sources/news/: francetvinfo.rs  futura_sciences.rs  goodnewsnetwork.rs  google.rs  lavoixdunord.rs  leparisien.rs  mod.rs  ouest-france.rs  positivr.rs  reddit-upliftingnews.rs  reporterre.rs  sciencesetavenir.rs  sudouest.rs  twentyminutes.rs
macros/src/: lib.rs
macros/tests/: macros_tests.rs
macros/tests/vec_sources_fn/: mod.rs  test1.rs  test2.rs
node-article-parser/: index.js  package-lock.json
nuxt/: app.config.ts  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
nuxt/components/: Header.vue  NewsCard.vue  NewsModal.vue  NewsTable.vue  NotFound.vue
nuxt/layouts/: default.vue  logged-in.vue
nuxt/middleware/: auth.global.ts
nuxt/pages/: [...id].vue  [id].vue  default.vue  index.vue  login.vue
nuxt/plugins/: surrealdb.client.ts
nuxt/utils/: news.d.ts
rater/: Cargo.toml
rater/src/: main.rs
shared/: Cargo.toml
shared/src/: config.rs  db_news.rs  lib.rs  telegram.rs
shared/tests/: config.rs  mock_config.toml  mock_env
src/: config.rs  main.rs  newsfetcher.rs
src/newsfetcher/: francetvinfo.rs  mod.rs  test.rs
src/sources/: francetvinfo.rs  mod.rs
