[package]
name = "news-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
futures = "0.3.28"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = [
  "fetch",
] }
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.30", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
