[package]
name = "news-scraper"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "macros"]

[dependencies]
anyhow = "1.0.72"
automod = "1.0.12"
env_logger = "0.10.0"
futures = "0.3.28"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = [
  "fetch",
] }
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.183"
tokio = { version = "1.30", features = ["rt-multi-thread", "macros", "sync"] }
macros = { path = "macros" }
toml = "0.7.6"
chrono = "0.4.26"
serde_json = "1.0.105"
