[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
automod = "1.0.13"
env_logger = "0.11.3"
futures = "0.3.28"
headless_chrome = { git = "https://github.com/mirsella/rust-headless-chrome" }
log = "0.4.20"
tokio = { version = "1.33", features = ["rt-multi-thread", "macros", "sync"] }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
serde = "1.0.189"
shared = { path = "../shared" }
ureq = { version = "2.8.0", features = ["json"] }
surrealdb = "1.5.4"
serde_json = "1.0.108"
