[package]
name = "rater"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "sync"] }
shared = { path = "../shared" }
log = "0.4.20"
env_logger = "0.11.3"
anyhow = "1.0.75"
serde_json = "1.0.108"
regex = "1.10.2"
async-openai = "0.16.3"
ctrlc = "3.4.1"
surrealdb = "1.5.4"
futures = "0.3.29"
rand = "0.8.5"
