[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.75"
async-openai = "0.14.3"
chrono = "0.4.26"
dotenvy = "0.15.7"
envy = "0.4.2"
maplit = "1.0.2"
nanohtml2text = "0.1.4"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = "1.0.0"
tiktoken-rs = { git = "https://github.com/mirsella/tiktoken-rs", rev = "9a1affa" }
ureq = { version = "2.8.0", features = ["json"] }
