[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.75"
async-openai = "0.23.4"
chrono = "0.4.31"
dotenvy = "0.15.7"
envy = "0.4.2"
maplit = "1.0.2"
nanohtml2text = "0.1.4"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.5.6"
tiktoken-rs = "0.5.7"
ureq = { version = "2.8.0", features = ["json"] }
